--- a/packages/generateFromSource/package.json
+++ b/packages/generateFromSource/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
-        "build": "tsc --project tsconfig.json" 
+        "build": "tsc --project tsconfig.json" ,
+        "test": "borp"
     }
 }
